[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afrl-es-scheduler"
version = "1.0.0"
description = "Article-faithful AFRL-ES scheduler simulation for AoI-aware IoT edge networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Research Implementation"}
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "tabulate>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
